# effect-py

./: LICENSE  README.md  pyproject.toml
cli/: pyproject.toml  requirements.txt
cli/src/: main.py
examples/: create_campaign.py
sdk/: pyproject.toml  requirements.txt
sdk/examples/: create_campaign.py
sdk/src/effectai/: __init__.py  campaign.py  client.py  config.py  effect.py  ipfs.py  task.py  types.py  vaccount.py
src/effect_sdk/: campaign.py  config.py  effect.py  ipfs.py  task.py  types.py  vaccount.py
