[project]
name = 'effectai-cli'
version = '0.0.1'
authors = [
  { name = 'Effect AI Campaign Tool', email = 'ops@effect.ai' }
]
description = "Effect AI CLI"
readme = "README.md"

[build-system]
requires = [ 'setuptools>=61.0', 'effectai', 'click', 'requests' ]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']