[project]
name = 'effectai'
version = '0.0.2'
authors = [
  { name = 'Effect AI', email = 'ops@effect.ai' }
]
description = "Effect AI SDK"
readme = "README.md"

[build-system]
requires = [ 'setuptools>=61.0', 'pyntelope', 'pydantic' ]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']